Modify .env file with new configuration values
Updated environment variables for JWT, MongoDB, email credentials, and port.

--- a/.env
+++ b/.env
@@ -1,8 +1,11 @@
-JWT_SECRET=supersecretkey
+JWT_SECRET=Sauravkumarsk2507
 JWT_EXPIRES_IN=1h
 
+MONGO_URI = mongodb+srv://Saurav:<$aurav210013>@tss.aby4z11.mongodb.net/?retryWrites=true&w=majority&appName=TSS
 
 
-EMAIL_USER=yourgmail@gmail.com
-EMAIL_PASS=your_generated_app_password
+EMAIL_USER=xyz21215454@gmail.com
+EMAIL_PASS=$aurav210013
+
+PORT = 10000
 
