--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 JWT_SECRET=Sauravkumarsk2507
 JWT_EXPIRES_IN=1h
 
-MONGO_URI = mongodb+srv://Saurav:<$aurav210013>@tss.aby4z11.mongodb.net/?retryWrites=true&w=majority&appName=TSS
+MONGO_URI = mongodb+srv://raone:<r%one210013>@tss.aby4z11.mongodb.net/?retryWrites=true&w=majority&appName=TSS
 
 
 EMAIL_USER=xyz21215454@gmail.com
